statefulset.yaml
# StatefulSet é um recurso do Kubernetes que permite que aplicativos que exigem um estado persistente, como bancos de dados, sejam executados em um ambiente escalável e resiliente
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: mysql-h # necessario para o stateful setar o dnsname
  # podManagementPolicy: Parallel # cria todos os container ao mesmo tempo sem seguir uma ordem de inserção ou exclusão
  replicas: 4
  selector:
      matchLabels:
        app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql
        volumeMounts: # a todo momento que criarmos uma nova replica vai criar tbm um novo volume
          - mountPath: /var/lib/mysql
            name: mysql-volume

  # utilizado para criar volumes dinamicamentes para os nossos statefulset
  volumeClaimTemplates:
    - metadata:
        name: mysql-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
