service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector: # responsavel por filtrar todos os pods que vão estar incoporados nesse serviço
    app: goserver
  type: ClusterIP # tipo do service exitem NodePort e LoadBalancer(gera ip publico)
  ports:
  - name: goserver-service # nome da porta
    port: 80 # altera a porta que vai disponibilizada pelo service
    targetPort: 9190 # porta que esta disponibilizando a aplicação pelo container, quando não colocamos é pego a mesma da tag 'port'
    protocol: TCP
